--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "f4-monitoring-interactive",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,5 +12,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "rollbar": "^2.24.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/normanjli/devops-demo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/normanjli/devops-demo/issues"
+  },
+  "homepage": "https://github.com/normanjli/devops-demo#readme",
+  "description": ""
 }
