--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "f4-monitoring-interactive",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "public/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node public/server.js"
