--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "f4-monitoring-interactive",
+  "name": "devops-demo",
   "version": "1.0.0",
   "main": "public/server.js",
   "scripts": {
